# kozo

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PHASEMAP.md  README.md  ROADMAP.md  build.zig  build.zig.old  rust-toolchain.toml
.codex/: AGENTS.md
agent/: agent_context.json
artifacts/: latest_verify.json
boot/: limine.conf
common/: boot_info.zig
contracts/: AGENTS.md  controlled_runtime_loop_contract.v0.json  first_governed_runtime_capability.v0.json  kozo_abi.h  kozo_abi_manifest.json  memory_initialization_evidence_contract.v0.json  runtime_evidence_taxonomy.v0.json  runtime_halt_contract.v0.json  runtime_progression_contract.v0.json  runtime_progression_entry_contract.v0.json  runtime_progression_stages.v0.json  stack_initialization_evidence_contract.v0.json  syscall_boundary_contract.v0.json  syscall_catalog.v0.json  syscall_class_contract.v0.json  syscall_table_contract.v0.json
docs/: ADR_POLICY.md  APPLICATION_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BOOT.md  BOOT_BLOCKERS.md  BOOT_IMAGE.md  BOOT_PROTOCOL.md  BOOT_TOOLING.md  CODEBASE_AUDIT.md  CODING_STYLE.md  COMPATIBILITY.md  CONTRACTS.md  DOCUMENTATION_STANDARD.md  GENERATED_ARTIFACTS.md  GOVERNANCE.md  INITIAL_BUILD_REPORT.md  INVARIANTS.md  MANIFESTO.md  PHASEMAP.md  ROADMAP.md  (+7 more)
services/init/: Cargo.toml
services/init/src/: main.rs
services/kozo-sys/: Cargo.toml
services/kozo-sys/src/: abi.rs  boot.rs  capability.rs  lib.rs  syscall.rs
services/policy/: Cargo.toml
services/policy/src/: auth.rs  db.rs  delegation.rs  main.rs  ui.rs
(+222 files in other folders)
